Updated the FIPS cryptographic algorithms tests (#16)
* made the CheckAlgorithms.java JDK8 compatible

* skipping FIPS tests by default, unless a variable is set to true

* deleted unnecessary tests, will be replaced with different ones

* added new tests for testing set crypto policies in containers

* renamed and updated the 700 and 701 tests to have more advanced logging